# katsdpcalproc

./: DEADJOE  Jenkinsfile  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.cache/v/cache/: lastfailed
src/: .pointi.swp
src/katsdpcalproc/: .pointing.py.swp  beam_baseline.py  calprocs.py  calprocs_dask.py  pointing.py  pointing.py.  pointing_from_token.py  solutions.py
tests/: conftest.py  test_calprocs.py  test_calprocs_dask.py  test_pointing.py  test_solutions.py
