[project]
name = "katsdpcalproc"
description = "Calibration procedures for the MeerKAT calibration pipeline"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
        {name = "SARAO DSP team", email = "sdpdev+katsdpcal@ska.ac.za"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "dask[array]>=1.1.0",
    "katdal<1",
    "katpoint<1",
    "numba>=0.49.0",
    "numpy>=1.15",
    "scikits.fitting",
    "scipy>=0.17",
    "sortedcontainers",
]
dynamic = ["version"]

[build-system]
requires = [
        "setuptools>=45",
        "setuptools_scm[toml]>=6.0",
]

[tool.setuptools_scm]
